config/pihole/pihole-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:

      containers:
        - name: pihole
          image: pihole/pihole:latest

          ports:
            - containerPort: 53
              protocol: UDP
            - containerPort: 53
              protocol: TCP
            - containerPort: 80

          volumeMounts:
            - name: pihole-config-data
              mountPath: /etc/pihole
            - name: pihole-dnsmasq-data
              mountPath: /etc/dnsmasq.d

      volumes:
        - name: pihole-config-data
          hostPath:
            path: /mnt/juicefs/pihole/data


        - name: pihole-dnsmasq-data
          hostPath:
            path: /mnt/juicefs/pihole/dnsmasq
