config/pihole/pihole-dns-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  namespace: pihole
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.1.100

  selector:
    app: pihole

  ports:
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP

    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
