config/pihole/pihole-ingress-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
    - port: 80
      targetPort: 80


---


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: pihole
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: pihole.colins.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-web
                port:
                  number: 80

  tls:
    - hosts:
        - pihole.colins.io
      secretName: wildcard-colins-io-tls
